--- a/cwsubdir/style.css
+++ b/cwsubdir/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('https://st3.depositphotos.com/19075074/34171/v/600/depositphotos_341710420-stock-illustration-evening-city-panorama-vector-sunset.jpg');
+    background-image: url('https://media.stridetreglown.com/wp-content/uploads/2021/05/21111411/Coleg-Gwent_Cyber-College_LowRES_6-1184x790.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
