--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #000000;
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
