--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url("https://img.freepik.com/free-vector/abstract-colorful-technology-dotted-wave-background_1035-17450.jpg");
     background-color: #000000;
     background-repeat: no-repeat;
     background-attachment: fixed;  
