--- a/ncc/style.css
+++ b/ncc/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://img.freepik.com/free-vector/abstract-colorful-technology-dotted-wave-background_1035-17450.jpg");
+    background-image: url("https://drive.google.com/file/d/1zB0NtbBeazUj5-DI2QfJOWg7Dxx7iK6z/view?usp=sharing");
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
