--- a/ncc/style.css
+++ b/ncc/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://imgur.com/a/ioJ5pFh");
+    background-image: url("https://ibb.co/ZK2LY59");
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
